# alma-lead

./: .env.example  .gitignore  NOTES.md  README.md  docker-compose.sqlite.yml  docker-compose.yml
.github/: pull_request_template.md
.github/actions/build-and-push/: action.yml
.github/actions/deploy-stack/: action.yml
.github/workflows/: ci.yml  release.yml  staging.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  leads.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: lead.py
backend/app/schemas/: auth.py  lead.py
backend/app/services/email/: __init__.py  base.py  console.py  resend.py  templates.py
backend/app/services/storage/: __init__.py  base.py  local.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_leads_create.py  test_leads_detail.py  test_leads_list.py
deploy/: Caddyfile  README.md  docker-compose.yml
docs/: AGENTS.md  DESIGN.md  PROMPTS.md  openapi.json
frontend/: .dockerignore  .gitignore  Dockerfile  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/leads/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: Alert.tsx  Badge.tsx  Button.tsx  Input.tsx
frontend/lib/: api.ts  auth.ts  types.ts  useDebounce.ts  utils.ts
scripts/: smoke.sh
